--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,4 @@ spring.datasource.url=jdbc:h2:C:/Users/ahmet/IdeaProjects/SpringWebMini/projdb/s
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql= true
 spring.main.allow-circular-references=true
+management.endpoints.web.exposure.include=*
